# makeshift

./: .gitignore  .readthedocs.yml  LICENSE  README.md  makeshift_demo.ipynb  mkdocs.yml  nmrstar_parser_demo.ipynb  parser.py  probabilistic_reference.py  pyproject.toml  test.py
.github/workflows/: publish.yml
demos/: bmrb_relaxation_demo.ipynb  cpmg_demo.ipynb  ntrc.tab  quick_start.ipynb  rci_validation.py  reref.ipynb  talosn_demo.ipynb
demos/hydronmr_validation/: README.md  validate_t1t2_meansub.py
demos/rci_validation/: rci_algorithm_validation.py
docs/: concepts.md  index.md  installation.md  mkdocs.yml  quickstart.md  rci_validation.md  requirements.txt
docs/api/: chemshift.md  cpmg.md  entry.md  hydronmr.md  index.md  peaklist.md  relaxation.md  reref.md  spectra.md  talosn.md  utils.md
docs/guide/: chemical-shifts.md  cpmg.md  datasets.md  entries.md  hydronmr.md  peaklists.md  relaxation.md  rereferencing.md  spectra.md  talosn.md
docs/stylesheets/: extra.css
examples/: SHP2_NSH2_CPMG.yaml
makeshift/: ChemShifts.py  README.md  ReRef.py  __init__.py  chemshift.py  cpmg.py  entry.py  parsing.py  peaklist.py  peaks.py  plot.py  plotting.py  spectrum.py
makeshift/_legacy_/hydronmr/: config.yml
makeshift/_legacy_/io/: __init__.py  io.py
makeshift/data/: README.md  __init__.py  bmrb_stats.csv  c_prime_rc.csv  panav_distns.csv  rci_next_effect.csv  rci_random_coil.csv  tables.py
makeshift/hydronmr/: README.md  __init__.py  config.yml  engine.py
makeshift/io/: ChemShifts.py  datasets.py
makeshift/plotting/: __init__.py  plot.py  plotting.py
makeshift/rci/: __init__.py  _talosn.py  engine.py
makeshift/relaxation/: __init__.py  classify.py  config.py  cpmg.py  fixes.py  lineshape.py  plotting.py  r2eff.py  relax_profile.py
makeshift/reref/: __init__.py  base.py  lacs.py  panav.py
makeshift/spectra/: __init__.py  matching.py  plotting.py  spectrum.py
makeshift/spectrum/: __init__.py  peaks.py
makeshift/talosn/: __init__.py  engine.py  utils.py
makeshift/utils/: __init__.py  chemshift_utils.py  constants.py  datasets.py  parsing_utils.py  plot_utils.py  reref_utils.py  structures.py  tables.py
scripts/reference_pipeline/: workflow.ipynb
tests/: README.md  test_peaklist.py  test_rci_regression.py  test_reref_lacs.py  test_reref_panav.py
(+70 files in other folders)
