[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "makeshift"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["makeshift*"]

[tool.setuptools.package-data]
makeshift = ["data/*.csv"]

[project.optional-dependencies]
demos = [
    "seaborn",
    "matplotlib",
    "jupyter",
]
